[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-toolkit-jl"
version = "0.1.0"
description = "Reusable portfolio performance evaluation and allocation optimization toolkit."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Jiuming Long"}]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["portfolio_toolkit*"]
